--- a/anfisa_for_friends/templates/homepage/index.html
+++ b/anfisa_for_friends/templates/homepage/index.html
@@ -5,8 +5,9 @@
 {% block content %}
   <h1 class="pb-2 mb-0">Главная страница</h1>
   {% for ice_cream in ice_cream_list %}
-    <h3>{{ ice_cream.title }}</h3>
-    <p>ID: {{ ice_cream.id }}</p>
-    <p>{{ ice_cream.description }}</p>
-  {% endfor %}
+  <!-- Выводим id и title объекта IceCream -->
+  <h3>{{ ice_cream.title }} ID: {{ ice_cream.id }}</h3>
+  <!-- Выводим поля связанного объекта Category -->
+  <p>Категория: {{ ice_cream.category.title }}</p>
+{% endfor %}
 {% endblock %}
